fix put chess out of bound

--- a/css/index.css
+++ b/css/index.css
@@ -4,10 +4,10 @@ main {
 
 #chat-box {
     width: 100%;
-    height: 600px;
+    height: 570px;
     min-width: 500px;
     margin-right: auto;
-    padding: 20px;
+    padding-left: 20px;
 }
 
 @media(max-width: 400px) {
